<resources>
    <string name="app_name">My Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cash_text">Tiền mặt</string>
    <string name="modify_value_button">Điều chỉnh số dư</string>
    <string name="expenditure_list">Tổng quan các giao dịch gần đây</string>
    <string name="expenditure_text">Chi tiêu</string>
    <string name="add_account">Thêm tài khoản</string>
    <string name="account_list_header_text">Danh sách các tài khoản</string>
    <string name="account_name_text">Tên tài khoản</string>
    <string name="account_balance_text">Số dư hiện tại</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Hủy</string>
    <string name="type_text">Loại</string>
    <string name="choose_account_type">Chọn loại tài khoản</string>
    <string name="save_account">Lưu tài khoản</string>
    <string name="waning_text">Vui lòng điền tên vào tài khoản</string>
    <string name="income_text">NHẬP</string>
    <string name="expenditure_button_text">CHI</string>
    <string name="account_label_text">Tài khoản</string>
    <string name="category_text">Thể loại</string>
    <string name="all_categories_text">Tất cả thể loại</string>
    <string name="account_id_key">ACCOUNTID</string>
    <string name="category_name_key">CATEGORYNAME</string>
    <string name="account_name_key">ACCOUNTNAME</string>
    <string name="number_string_key">NUMBERKEY</string>
    <string name="is_income_key">ISINCOMEKEY</string>
    <string name="transaction_list_header_text">Tổng quan các giao dịch gần đây</string>
    <string name="show_more_text">Hiển thị thêm</string>
    <string name="seven_day_text">7D</string>
    <string name="thirty_day_text">30D</string>
    <string name="twelve_week_text">12W</string>
    <string name="six_month_text">6M</string>
    <string name="one_year_text">1Y</string>
</resources>